002: apply Save Button style : backgroundColor, backgroundColor when highlighted, text color and border radius

--- a/GithubPractice/ViewController.xib
+++ b/GithubPractice/ViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18092"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -68,12 +68,22 @@
                                 <constraint firstAttribute="height" constant="40" id="pLG-4B-88q"/>
                             </constraints>
                         </datePicker>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ori-yE-hfp">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ori-yE-hfp" customClass="HighlightButton" customModule="GithubPractice" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="200" width="343" height="48"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="8zY-t8-czE"/>
                             </constraints>
-                            <state key="normal" title="Save"/>
+                            <state key="normal" title="Save">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="normalBackgroundColor">
+                                    <color key="value" red="0.019607843140000001" green="0.67450980390000004" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="highlightedBackgroundColor">
+                                    <color key="value" red="0.32156862749999998" green="0.76470588240000004" blue="0.79607843140000001" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="didClickSave:" destination="-1" eventType="touchUpInside" id="MHS-Lf-cgW"/>
                             </connections>
@@ -111,6 +121,11 @@
             <point key="canvasLocation" x="139" y="92"/>
         </view>
     </objects>
+    <designables>
+        <designable name="Ori-yE-hfp">
+            <size key="intrinsicContentSize" width="39" height="34"/>
+        </designable>
+    </designables>
     <resources>
         <image name="Image" width="250" height="250"/>
         <systemColor name="systemBackgroundColor">
