--- a/GithubPractice/ViewController.xib
+++ b/GithubPractice/ViewController.xib
@@ -100,11 +100,13 @@
                         </button>
                     </subviews>
                 </stackView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="Mrg-aL-3ay">
-                    <rect key="frame" x="16" y="16" width="343" height="250"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Image" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mrg-aL-3ay">
+                    <rect key="frame" x="62" y="16" width="250" height="250"/>
+                    <color key="backgroundColor" red="0.019607843140000001" green="0.67450980390000004" blue="0.73333333329999995" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="250" id="uBO-J8-SnN"/>
                     </constraints>
+                    <edgeInsets key="layoutMargins" top="8" left="8" bottom="8" right="8"/>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
@@ -113,8 +115,8 @@
                 <constraint firstItem="8LZ-85-u5J" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Mrg-aL-3ay" secondAttribute="bottom" constant="32" id="Ii0-FD-rNV"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="8LZ-85-u5J" secondAttribute="trailing" constant="16" id="dMi-eU-xEk"/>
                 <constraint firstItem="8LZ-85-u5J" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="e4l-lq-aPI"/>
-                <constraint firstItem="Mrg-aL-3ay" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="i3B-yY-h0k"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Mrg-aL-3ay" secondAttribute="trailing" constant="16" id="rkX-oX-syH"/>
+                <constraint firstItem="Mrg-aL-3ay" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="46" id="i3B-yY-h0k"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Mrg-aL-3ay" secondAttribute="trailing" constant="47" id="rkX-oX-syH"/>
                 <constraint firstItem="Mrg-aL-3ay" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="sS0-5k-rYp"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="8LZ-85-u5J" secondAttribute="bottom" constant="16" id="uKY-FV-mv3"/>
             </constraints>
